ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: my-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - 'dsandbox.online'
        - 'argo.dsandbox.online'
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: dsandbox.online 
      http: 
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api/core/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: core-svc
                port:
                  number: 80
          - path: /api/analytic/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytic-svc
                port:
                  number: 80
    - host: argo.dsandbox.online
      http: 
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
